# personal_assistant

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  description.txt  package-lock.json  pyproject.toml
app/: auth.py  config.py  db.py  ingest.py  job_status.py  main.py  migrations.py  models.py  templating.py
app/digest/: renderer.py  runner.py  sender.py
app/integrations/: calendar.py  gmail.py  icloud.py  jira.py  linear.py  slack.py  stocks.py  weather.py
app/routers/: dashboard.py  jira.py  linear.py  slack.py  todos.py
app/templates/: base.html  dashboard.html  digest_email.html  jira.html  linear.html  login.html  slack.html  todos.html
app/templates/partials/: jira_list.html  linear_list.html  page_header.html  search_input.html  slack_list.html  status_footer.html  tab_nav.html  tag_cloud_pills.html  todo_edit_panel.html  todo_row.html  todos_content.html  unprocessed_badge.html
jobs/: digest_runner.py  email_watcher.py  test_icloud_fetch.py
jobs/importers/: base.py  joplin.py  run.py  todoist.py
k8s/: cronjobs.yaml  deployment.yaml  namespace.yaml
migrations/: 001_initial.sql  002_add_todo_notes.sql  002_job_runs.sql  003_slack_ignores.sql  004_jira_ignores.sql  005_todo_labels.sql  006_todo_due_date.sql  007_linear.sql
tests/: test_caching_optimizations.py  test_calendar.py  test_todo_features.py
